2017-05-18 record version